[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://assets/BG.png" type="Texture" id=2]
[ext_resource path="res://scenes/HUD/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD/PauseControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD/GameoverControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/enemies/Enemies.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/player/AnimatedPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Score.gd" type="Script" id=8]
[ext_resource path="res://scripts/Health.gd" type="Script" id=9]
[ext_resource path="res://assets/Sounds/Mensana-song-01.ogg" type="AudioStream" id=10]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
modulate = Color( 0.746094, 0.746094, 0.746094, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="InterfaceLayer" type="CanvasLayer" parent="." groups=[
"interface",
]]

[node name="Interface" parent="InterfaceLayer" instance=ExtResource( 3 )]

[node name="PauseControl" parent="InterfaceLayer" instance=ExtResource( 4 )]

[node name="GameoverControl" parent="InterfaceLayer" instance=ExtResource( 5 )]
visible = false

[node name="Enemies" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" parent="." groups=[
"actors",
] instance=ExtResource( 7 )]
editor/display_folded = true

[node name="Score" type="Node" parent="AnimationPlayer"]
script = ExtResource( 8 )

[node name="Health" type="Node" parent="AnimationPlayer"]
script = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
[connection signal="score_changed" from="AnimationPlayer/Score" to="InterfaceLayer/Interface" method="_on_Score_score_changed"]
[connection signal="health_changed" from="AnimationPlayer/Health" to="InterfaceLayer/Interface" method="_on_Health_health_changed"]
